--- a/unfinished/mardal-4/chapter.tex
+++ b/unfinished/mardal-4/chapter.tex
@@ -18,8 +18,8 @@
 %\newcommand{\eit}{\end{itemize}}
 %\DefineVerbatimEnvironment{code}{Verbatim}{frame=single,rulecolor=\color{blue},fontsize=\small}
 
-\fenicschapter{Block Preconditioning of Systems of PDEs}
-              {Block Preconditioning of Systems of PDEs}
+\fenicschapter{Block preconditioning of systems of PDEs}
+              {Block preconditioning of systems of PDEs}
               {Kent-Andre Mardal}
               {block-prec}
 
@@ -34,7 +34,7 @@ present several examples, namely the Poisson problem, the Stokes problem,
 the time-dependent Stokes problem and finally a mixed formulation
 of the Hodge Laplacian. 
 
-\section{Abstract Framework for Constructing Preconditioners}
+\section{Abstract framework for constructing preconditioners}
 
 This presentation of preconditioning is largely taken from the
 review paper~\citep{MardalWinther11}, where a more comprehensive mathematical
@@ -45,8 +45,8 @@ Find $u$ in a Hilbert space $H$ such that:
 \mathcal{A} u = f,  
 \end{equation}
 where $f\in H'$ and $H'$ is the dual space of $H$.  
-We will assume that the PDE problem is well-posed, i.e., 
-that $\mathcal{A} : H \rightarrow H'$ is a bounded invertible operator in the sense that,  
+We will assume that the PDE problem is well-posed; that is,  
+$\mathcal{A} : H \rightarrow H'$ is a bounded invertible operator in the sense that,  
 \begin{equation}
 \|\mathcal{A}\|_{\mathcal{L} (H, H')} \le C \quad \mbox{and} \quad  
 \|\mathcal{A}^{-1}\|_{\mathcal{L} (H', H)} \le C. 
@@ -76,7 +76,8 @@ preconditioned operator,
 \begin{equation}
 \kappa(\mathcal{B}\mathcal{A}) = \|\mathcal{B}\mathcal{A}\|_{\mathcal{L}(H, H)} \|(\mathcal{B}\mathcal{A})^{-1}\|_{\mathcal{L}(H, H)} \le C^4  
 \end{equation}
-is bounded.  One example of such a preconditioner is the Riesz operator $\mathcal{R}$, i.e.,  the identity mapping between $H'$ and $H$.  
+is bounded.  One example of such a preconditioner is the Riesz operator
+$\mathcal{R}$; that is, the identity mapping between $H'$ and $H$.  
 In this case 
 \begin{equation}
 \|\mathcal{R}\|_{\mathcal{L}(H', H)} = 1 \quad \mbox{and} \quad   
@@ -103,7 +104,7 @@ is a stable operator and we will illustrate what happens for unstable operators 
 Finally, we will see that $\mathcal{B}_h$ often can be constructed using multigrid techniques. These multigrid
 preconditioners will be spectrally equivalent with the Riesz mappings. 
 
-\section{Numerical Examples}
+\section{Numerical examples}
 In all examples the mesh will be refinements of the unit square or unit cube. 
 The code examples presented in this chapter differ slightly from the source
 code, in the sense that import statements,  safety checks, command-line arguments, definitions of \emp{Functions}
@@ -119,11 +120,12 @@ Find $u$ such that
 \end{eqnarray}
 The corresponding variational problem is:  Find $u\in H^1 \cap L^2_0$ such that 
 \[
-\int_\Omega \nabla u \cdot \nabla v \, dx = \int_\Omega f v \, dx + \int_{\partial \Omega} g v \, ds, \quad\forall v \in H^1 \cap L^2_0 .      
+\int_\Omega \nabla u \cdot \nabla v \, \dx = \int_\Omega f v \, \dx +
+\int_{\partial \Omega} g v \, \ds, \quad\foralls v \in H^1 \cap L^2_0 .      
 \]
 Let the linear operator $\mathcal{A}$ be defined in terms of the  bilinear form,  
 \[
-(\mathcal{A} u, v) =  \int_\Omega \nabla u \cdot \nabla v \, dx.  
+(\mathcal{A} u, v) =  \int_\Omega \nabla u \cdot \nabla v \, \dx.  
 \]
 It is well-known that 
 $\mathcal{A}$ is a bounded invertible operator from $H^1 \cap L^2_0$ into its dual space. 
@@ -292,7 +294,7 @@ $\#iterations$ & 8 & 8 & 9 & 9 & 8 \\ \hline
 
 
 
-\subsection{The Stokes Problem}
+\subsection{The Stokes problem}
 Our next example is the Stokes problem, 
 \begin{eqnarray}
 -\Delta u - \nabla p &=& f \quad \mbox{in} \ \Omega, \\ 
@@ -302,9 +304,10 @@ Our next example is the Stokes problem,
 The variational form is: \\ 
 Find $u,p \in H^1_g \times L_0^2$ such that  
 \[
-\int_\Omega \nabla u : \nabla v \,  dx + 
-\int_\Omega \nabla \cdot u \, q \,  dx +  
-\int_\Omega \nabla \cdot v \, p \,  dx = \int_\Omega f\, v\, dx   , \quad \forall v,q \in H^1_0 \times L_0^2.
+\int_\Omega \nabla u : \nabla v \,  \dx + 
+\int_\Omega \nabla \cdot u \, q \,  \dx +  
+\int_\Omega \nabla \cdot v \, p \,  \dx = \int_\Omega f\, v\, \dx   , \quad
+\foralls v,q \in H^1_0 \times L_0^2.
 \]
 Let the linear operator $\mathcal{A}$ be defined as
 \[
@@ -313,8 +316,8 @@ Let the linear operator $\mathcal{A}$ be defined as
 \]
 where 
 \begin{eqnarray}
-(A u, v) &=& \int_\Omega \nabla u : \nabla v \,  dx, \\  
-(B u, q) &=& \int_\Omega \nabla \cdot u \, q \,  dx,    
+(A u, v) &=& \int_\Omega \nabla u : \nabla v \,  \dx, \\  
+(B u, q) &=& \int_\Omega \nabla \cdot u \, q \,  \dx,    
 \end{eqnarray}
 and $B^*$ is the adjoint of $B$.  
 Then it is well-known that $\mathcal{A}$ is a bounded operator from
@@ -330,8 +333,8 @@ defined as
 \]
 where 
 \begin{eqnarray}
-(K u, v) &=& \int_\Omega \nabla u: \nabla v \, dx \\ 
-(L p, q) &=& \int_\Omega p \, q \, dx .   
+(K u, v) &=& \int_\Omega \nabla u: \nabla v \, \dx \\ 
+(L p, q) &=& \int_\Omega p \, q \, \dx .   
 \end{eqnarray}
 We refer to \citep{MardalWinther11} for a mathematical explanation of the derivation 
 of such preconditioners. 
@@ -365,7 +368,8 @@ independently of $h$. For the unstable $\mathrm{CG}_1-\mathrm{CG}_1$ method, the
 and the condition number increases as $h$ decreases. However, for 
 the stabilized method, $\mathrm{CG}_1-\mathrm{CG}_1$-stab, where the pressure is stabilized by 
 \[
-\int_\Omega \nabla \cdot u \, q  - \alpha h^2 \, \nabla p \cdot \nabla q \, dx,       
+\int_\Omega \nabla \cdot u \, q  - \alpha h^2 \, \nabla p \cdot \nabla q \,
+    \dx,       
 \]
 with $\alpha=0.01$, the number of iterations and the condition number appear to be bounded. 
 
@@ -460,7 +464,7 @@ x, i, rho  = MinRes.precondMinRes(B, A, x, b, 10e-8, False, 200)
 \end{python}
 We refer to \emp{stokes.py} for the complete code. 
 
-\subsection{The time-dependent Stokes Problem}
+\subsection{The time-dependent Stokes problem}
 Our next example is the time-dependent Stokes problem,
 \begin{eqnarray}
 u - k \Delta u - \nabla p &=& f \quad \mbox{in} \ \Omega, \\ 
@@ -472,10 +476,11 @@ Here $k$ is the time stepping parameter.
 The variational form is: \\ 
 Find $u,p \in H^1_0 \times L_0^2$ such that  
 \[
-\int_\Omega u \cdot v \,  dx + 
-k \int_\Omega \nabla u : \nabla v \,  dx + 
-\int_\Omega \nabla \cdot u \, q \,  dx +  
-\int_\Omega \nabla \cdot v \, p \,  dx = \int_\Omega f\, v\, dx   , \quad \forall v,q \in H^1_0 \times L_0^2.
+\int_\Omega u \cdot v \,  \dx + 
+k \int_\Omega \nabla u : \nabla v \,  \dx + 
+\int_\Omega \nabla \cdot u \, q \,  \dx +  
+\int_\Omega \nabla \cdot v \, p \,  \dx = \int_\Omega f\, v\, \dx   , \quad
+\foralls v,q \in H^1_0 \times L_0^2.
 \]
 Let 
 \[
@@ -484,8 +489,9 @@ Let
 \]
 where 
 \begin{eqnarray}
-(A u, v) &=& \int_\Omega u \cdot v \,  dx +  k \int_\Omega \nabla u : \nabla v \,  dx, \\  
-(B u, q) &=& \int_\Omega \nabla \cdot u \, q \,  dx,    
+(A u, v) &=& \int_\Omega u \cdot v \,  \dx +  k \int_\Omega \nabla u :
+\nabla v \,  \dx, \\  
+(B u, q) &=& \int_\Omega \nabla \cdot u \, q \,  \dx,    
 \end{eqnarray}
 This operator changes character as $k$ varies.  
 For $k=1$ the problem behaves like Stokes problem, with 
@@ -519,9 +525,9 @@ Such a $\mathcal{B}$ can be defined as
 \]
 where 
 \begin{eqnarray}
-(K u, v) &=& \int_\Omega \nabla u: \nabla v \, dx \\ 
-(L p, q) &=& \int_\Omega k^{-1} p q \, dx \\   
-(M p, q) &=& \int_\Omega \nabla p \cdot  \nabla q \, dx .   
+(K u, v) &=& \int_\Omega \nabla u: \nabla v \, \dx \\ 
+(L p, q) &=& \int_\Omega k^{-1} p q \, \dx \\   
+(M p, q) &=& \int_\Omega \nabla p \cdot  \nabla q \, \dx .   
 \end{eqnarray}
 Again we refer to \citep{MardalWinther11} and references therein,  for an overview and more comprehensive mathematical derivation 
 of the construction of such preconditioners.  
@@ -601,18 +607,19 @@ of the Hodge Laplacian,
 The variational form is: \\ 
 Find $u, p \in H_0(\operatorname{curl}) \times H^1_0$ such that   
 \begin{eqnarray}
-\int_\Omega \nabla \times u \cdot \nabla \times v \, dx    
-- \int_\Omega \nabla p v \, dx  &=& \int_\Omega f v \, dx  \quad \forall v \in H_0(\operatorname{curl}) \\
- \int_\Omega u  \nabla q  \, dx - \int_\Omega p q \, dx   &=& 0 \quad \forall q \in H^1_0 . 
+\int_\Omega \nabla \times u \cdot \nabla \times v \, \dx    
+- \int_\Omega \nabla p v \, dx  &=& \int_\Omega f v \, \dx  \quad \foralls v \in H_0(\operatorname{curl}) \\
+ \int_\Omega u  \nabla q  \, dx - \int_\Omega p q \, \dx   &=& 0 \quad
+ \foralls q \in H^1_0 . 
 \end{eqnarray}
 Hence, it is natural to consider preconditioner a for $H(\operatorname{curl})$ problems
 (in addition to $H^1$ preconditioners). Such preconditioners have
 been considered by many c.f. e.g.
-~\cite{ArnoldFalkWinther1997a,ArnoldFalkWinther2000,Hiptmair1997,Hiptmair1999}.   
+~\citep{ArnoldFalkWinther1997a,ArnoldFalkWinther2000,Hiptmair1997,Hiptmair1999}.   
 One important observation in these papers is that point-wise smoothers
 are not appropriate for geometric multigrid methods. Furthermore, 
 for algebraic multigrid methods, extra care has to be taken for the
-aggregation step~\cite{GeeSiefertHuEtAl2006,HuTuminaroBochevEtAl2006}. 
+aggregation step~\citep{GeeSiefertHuEtAl2006,HuTuminaroBochevEtAl2006}. 
 
 Let 
 \[
@@ -621,9 +628,9 @@ Let
 \]
 where, 
 \begin{eqnarray}
-(A u, v) &=& \int_\Omega \nabla \times u \cdot \nabla \times v \, dx, \\    
-(B p, v) &=&  - \int_\Omega \nabla p v \, dx \\
-(C p, q) &=&  - \int_\Omega p q \, dx 
+(A u, v) &=& \int_\Omega \nabla \times u \cdot \nabla \times v \, \dx, \\    
+(B p, v) &=&  - \int_\Omega \nabla p v \, \dx \\
+(C p, q) &=&  - \int_\Omega p q \, \dx 
 \end{eqnarray}
 Then $\mathcal{A}: H_0(\operatorname{curl}) \times H^1_0 \rightarrow  H^{-1}(\operatorname{curl}) \times H^{-1}$, where   
 $H^{-1}(\operatorname{curl})$ is the dual of   $H_0(\operatorname{curl})$.
@@ -631,7 +638,7 @@ $H^{-1}(\operatorname{curl})$ is the dual of   $H_0(\operatorname{curl})$.
 
 However, if we for the moment forget about the boundary conditions, 
 we can obtain the Laplacian form  by eliminating $p$ 
-from \eqref{mixed:hodge1}-\eqref{mixed:hodge2}, i.e.,    
+from \eqref{mixed:hodge1}-\eqref{mixed:hodge2}; that is,    
 \[
 \nabla \times \nabla \times u - \nabla \nabla \cdot u = f .  
 \]
@@ -657,8 +664,8 @@ L_h  = A_h +  B_h^* (diag(C_h))^{-1} B_h,
 The matrix $L_h$ is then in some sense a vector Laplacian, incorporating the mixed discretization technique. 
 To test the efficiency of this preconditioner compared with 
 more straightforward applications of AMG, we compare a couple of different problems.   
-First, we test the preconditioners for the $A_h$ and the $L_h$ operators, 
-i.e., we estimate the condition number for the systems 
+First, we test the preconditioners for the $A_h$ and the $L_h$ operators; 
+that is, we estimate the condition number for the systems 
 $P_1 A_h$ and $P_2 L_h$, where $P_1$ and $P_2$ is simply the algebraic multigrid 
 preconditioners for $A_h$ and $L_h$, respectively. 
 Then we test the preconditioners 
@@ -715,7 +722,8 @@ EE = assemble(aa, DD, reset_sparsity=False, add_values=True)
 The complete code can be found in \emp{hodge8.py} and \emp{hodge9.py}. 
 
 In Table~\ref{table:hodge} we list the estimated condition numbers on various mesh refinements
-on the unitcube. We use the  lowest order Nedelec elements of first kind~\cite{Nedelec1980a} combined with continuous piecewise linears.
+on the unitcube. We use the  lowest order \nedelec{} elements of first
+kind~\citep{Nedelec1980a} combined with continuous piecewise linears.
 In this example we use homogeneous boundary conditions and $f=0$, but we use a random start vector. 
 \begin{table}
 \begin{center}
@@ -742,7 +750,7 @@ in the language which these algorithms are typically expressed in books.
 Furthermore, it is relatively simple to employ state--of--the--art algebraic multigrid 
 algorithms in Python using Trilinos. 
 We remark that
-an alternative to PyTrilinos is PyAMG~\cite{BellOlsonSchroder2009} which can be used together with PyDolfin. 
+an alternative to PyTrilinos is PyAMG~\citep{BellOlsonSchroder2009} which can be used together with PyDolfin. 
 
 
 We have shown the implementation of block preconditioners for a few selected problems. 
