Add revised version of chapter [kvs-2]

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,13 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
+@book{Gray1897,
+  title={{Anatomy, descriptive and surgical}},
+  author={Gray, H.},
+  year={1897},
+  publisher={Lea brothers}
+}
+
 @MISC{www:swig,
   title = {Software package},
   author = {SWIG},
