--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2,7 +2,7 @@
 % Encoding: UTF8
 
 @book{Gray1897,
-  title={{Anatomy, descriptive and surgical}},
+  title={Anatomy, descriptive and surgical},
   author={Gray, H.},
   year={1897},
   publisher={Lea brothers}
@@ -8789,14 +8789,14 @@
 
 @UNPUBLISHED{vmtk,
   title = {{Vascular Modeling Toolkit}},
-  key = {{Vascular Modeling Toolkit}},
+  key = {Vascular Modeling Toolkit},
   url = {http://vmtk.org/}
 }
 
 @UNPUBLISHED{wimr,
   title = {{Wisconsin Institutes for Medical Research (WIMR) at the University
 	of Wisconsin School of Medicine and Public Health in Madison}},
-  note = {\emph{www.med.wisc.edu/wimr/}},
+  url = {http://www.med.wisc.edu/wimr/},
   key = {{Wisconsin Institutes for Medical Research (WIMR) at the University
 	of Wisconsin School of Medicine and Public Health in Madison}}
 }
