--- a/book.tex
+++ b/book.tex
@@ -74,7 +74,7 @@
 %\fenicsinput{selim}
 %\fenicsinput{shan}
 %\fenicsinput{lopes}
-%\fenicsinput{kvs-2}
+\fenicsinput{kvs-2}
 %\fenicsinput{hentschel}
 \fenicsinput{narayanan}
 %\fenicsinput{oelgaard-1}
