--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,7 +5,7 @@
   title={Anatomy, descriptive and surgical},
   author={Gray, H.},
   year={1897},
-  publisher={Lea brothers}
+  publisher={Lea Brothers}
 }
 
 @MISC{www:swig,
@@ -1017,9 +1017,6 @@
   year = {1992},
   pages = {294--302},
   address = {Berkeley, California, United States},
-  doi = {10.1145/143242.143335},
-  owner = {logg},
-  timestamp = {2009.06.07},
   url = {http://dx.doi.org/10.1145/143242.143335}
 }
 
@@ -1031,12 +1028,6 @@
   year = {2002},
   pages = {98--107},
   address = {Portland, Oregon},
-  doi = {10.1145/503032.503047},
-  isbn = {{1-58113-455-X}},
-  keywords = {automatic differentiation,component software,intermediate representation,semantic
-	transformation,source transformation},
-  owner = {logg},
-  timestamp = {2009.06.07},
   url = {http://dx.doi.org/10.1145/503032.503047}
 }
 
@@ -1138,7 +1129,6 @@
   volume = {39},
   pages = {2997-3002},
   number = {11},
-  doi = {10.1161/STROKEAHA.108.521617},
   url = {http://dx.doi.org/10.1161/STROKEAHA.108.521617}
 }
 
@@ -2594,8 +2584,8 @@
 	W. Hedlund and C. E. Spritzer and R. Negro-Vilar and C. A. Beam and
 	N. J. Pelc},
   title = {Magnetic resonance imaging of blood flow with a phase subtraction
-	technique. In vitro and in vivo validation.},
-  journal = {Investigative radiology},
+	technique. In vitro and in vivo validation},
+  journal = {Investigative Radiology},
   year = {1993},
   volume = {28},
   number = {2}
@@ -2649,7 +2639,9 @@
   journal = {The Lancet},
   year = {2005},
   volume = {365},
-  pages = {2160--2161}
+  number = {9478},
+  pages = {2160--2161},
+  url = {http://dx.doi.org/10.1016/S0140-6736(05)66755-4}
 }
 
 @PHDTHESIS{Felippa1966,
@@ -2872,10 +2864,7 @@
   volume = {23},
   pages = {572-577},
   number = {6},
-  note = {PMID: 5861140},
-  doi = {10.3171/jns.1965.23.6.0572},
-  eprint = {http://thejns.org/doi/pdf/10.3171/jns.1965.23.6.0572},
-  url = {http://thejns.org/doi/abs/10.3171/jns.1965.23.6.0572}
+  url = {http://dx.doi.org/10.3171/jns.1965.23.6.0572},
 }
 
 @MISC{GeuzaineRemacle,
@@ -3786,7 +3775,8 @@
   journal = {J Neurosurg.},
   year = {2004},
   volume = {101},
-  pages = {108-113}
+  pages = {108-113},
+  url = {http://dx.doi.org/10.3171/jns.2004.101.1.0108}
 }
 
 @BOOK{International1996,
@@ -3972,9 +3962,9 @@
   author = {Jingfeng Jiang and Kevin Johnson and Kristian Valen-Sendstad and
 	Kent-Andre Mardal and Oliver Wieben and Charles Strother},
   title = {Flow Characteristics in a Canine Aneurysm Model: A Comparison of
-	4-D Accelerated Phase-Contrast MR Measurements and Computational
-	Fluid Dynamics Simulations (Submitted)},
-  journal = {American Journal of Neuroradiology},
+	{4-D} Accelerated Phase-Contrast {MR} Measurements and Computational
+	Fluid Dynamics Simulations},
+  note = {Submitted},
   year = {2010}
 }
 
@@ -3982,8 +3972,8 @@
   author = {Jingfeng Jiang and Kevin Johnson and Kristian Valen-Sendstad and
 	Kent-Andre Mardal and Oliver Wieben and Charles Strother},
   title = {Flow Characteristics in a Canine Aneurysm Model: Interoperability
-	and error measurement. (To be submitted)},
-  journal = {American Journal of Neuroradiology},
+	and error measurement},
+  note = {Submitted},
   year = {2010}
 }
 
@@ -4572,8 +4562,8 @@
 }
 
 @ARTICLE{KongableLanzinoGermansonEtAl1996,
-  author = {GL Kongable and G Lanzino and TP Germanson and LL Truskowski and
-	WM Alves and JC Torner and NF Kassell },
+  author = {G. L. Kongable and G. Lanzino and T. P. Germanson and L. L. Truskowski and
+	W. M. Alves and J. C. Torner and N. F. Kassell},
   title = {Gender-related differences in aneurysmal subarachnoid hemorrhage},
   journal = {Journal of Neurosurgery},
   year = {1996},
