More bib cleanup.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -26,19 +26,7 @@
   timestamp = {2009.06.06}
 }
 
-@ARTICLE{OlgaardLoggWells2008,
-  author = {K. B. \O{}lgaard and A. Logg and G. N. Wells},
-  title = {Automated code generation for discontinuous {G}alerkin methods},
-  journal = {SIAM Journal on Scientific Computing},
-  year = {2008},
-  volume = {31},
-  pages = {849--864},
-  number = {2},
-  owner = {logg},
-  timestamp = {2009.06.07},
-}
-
-@ARTICLE{OlgaardWells2010,
+@ARTICLE{OelgaardWells2010,
   author = {K. B. \O{}lgaard and G. N. Wells},
   title = {Optimisations for Quadrature Representations of Finite Element Tensors
 	through Automated Code Generation},
@@ -3997,10 +3985,6 @@
   volume = {190},
   pages = {757--781},
   number = {5-7},
-  file = {:Volker2000.pdf:PDF},
-  owner = {massing},
-  publisher = {Elsevier},
-  timestamp = {2009.05.27}
 }
 
 @ARTICLE{JohnKnobloch2007,
@@ -4012,12 +3996,7 @@
   volume = {196},
   pages = {2197 - 2215},
   number = {17-20},
-  doi = {DOI: 10.1016/j.cma.2006.11.013},
-  file = {John_2007_2197.pdf:John_2007_2197.pdf:PDF;John_2007_2197.pdf:John_2007_2197.pdf:PDF},
-  issn = {0045-7825},
-  keywords = {Convection-diffusion equations},
-  timestamp = {2009.07.02},
-  url = {http://www.sciencedirect.com/science/article/B6V29-4MPC439-2/2/e985dbff270415d66411a8a1d6cf9f80}
+  doi = {http://dx.doi.org/10.1016/j.cma.2006.11.013},
 }
 
 @ARTICLE{Johnson1988,
@@ -4059,15 +4038,8 @@
   publisher = {Cambridge University Press},
   year = {1997},
   author = {Johnson, R. S.},
-  pages = {xiv+445},
   series = {Cambridge Texts in Applied Mathematics},
   address = {Cambridge},
-  isbn = {0-521-59832-X},
-  mrclass = {76B15 (35Q35 35Q51 76-01 76D33)},
-  mrnumber = {MR1629555 (99m:76017)},
-  mrreviewer = {Harvey Segur},
-  owner = {logg},
-  timestamp = {2009.06.07}
 }
 
 @MISC{Jones2009,
@@ -4135,31 +4107,6 @@
   edition = {Second}
 }
 
-@BOOK{KarniadakisSherwin1999,
-  title = {Spectral/{$hp$} element methods for {CFD}},
-  publisher = {Oxford University Press},
-  year = {1999},
-  author = {Karniadakis, George Em and Sherwin, Spencer J.},
-  pages = {xii+390},
-  series = {Numerical Mathematics and Scientific Computation},
-  address = {New York},
-  isbn = {0-19-510226-6},
-  mrclass = {76M10 (65M70 76M22)},
-  mrnumber = {2000h:76120},
-  mrreviewer = {Jean-Luc Guermond},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@ARTICLE{KarpeevKnepley2005,
-  author = {Dmitry A. Karpeev and Matthew G. Knepley},
-  title = {Flexible Representation of Computational Meshes},
-  journal = {submitted to {ACM} Trans. Math. Softw.},
-  year = {2005},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
 @ARTICLE{KayLoghinWathen2002,
   author = {D. Kay and D. Loghin and A. Wathen},
   title = {A preconditioner for the steady-state {N}avier-{S}tokes equations},
@@ -4191,7 +4138,7 @@
 
 @ARTICLE{KimuraBejan1983,
   author = {S. Kimura and A. Bejan},
-  title = {The 'Heatline' Visualization of Convective Heat Transfer},
+  title = {The `Heatline' Visualization of Convective Heat Transfer},
   journal = {Journal of Heat Transfer},
   year = {1983},
   volume = {105},
@@ -4232,45 +4179,15 @@
   timestamp = {2009.06.06}
 }
 
-@ARTICLE{Kirby2006b,
-  author = {Robert C. Kirby},
-  title = {Optimizing {FIAT} with {Level 3 BLAS}},
-  journal = {{ACM} Transactions on Mathematical Software},
-  year = {2006},
-  volume = {32},
-  pages = {223--235},
-  number = {2},
-  month = jun,
-  owner = {logg},
-  timestamp = {2009.06.06},
-  url = {http://doi.acm.org/10.1145/1141885.1141889}
-}
-
-@ARTICLE{Kirby2006c,
-  author = {R. C. Kirby},
-  title = {Optimizing FIAT with level 3 BLAS},
-  journal = {ACM Trans. Math. Software},
-  year = {2006},
-  volume = {32},
-  pages = {223--235},
-  number = {2},
-  owner = {kent-and},
-  timestamp = {2009.06.08}
-}
-
 @ARTICLE{Kirby2006d,
   author = {Robert C. Kirby},
   title = {Optimizing {FIAT} with level 3 {BLAS}},
-  journal = {{ACM} Trans. Math. Softw.},
+  journal = {ACM Trans. Math. Softw.},
   year = {2006},
   volume = {32},
   pages = {223--235},
   number = {2},
-  doi = {10.1145/1141885.1141889},
-  keywords = {finite element,hilbert space,numerical linear algebra},
-  owner = {logg},
-  timestamp = {2009.06.07},
-  url = {http://portal.acm.org/citation.cfm?id=1141885.1141889&coll=GUIDE&dl=GUIDE&CFID=35011842&CFTOKEN=29677782}
+  url = {http://dx.doi.org/10.1145/1141885.1141889},
 }
 
 @ARTICLE{Kirby2004,
@@ -4286,7 +4203,7 @@
 
 @ARTICLE{Kirby2004a,
   author = {R. C. Kirby},
-  title = {Algorithm 839: FIAT, a new paradigm for computing finite element
+  title = {Algorithm 839: {FIAT}, a new paradigm for computing finite element
 	basis functions},
   journal = {ACM Trans. Math. Software},
   year = {2004},
@@ -4297,20 +4214,10 @@
   timestamp = {2009.06.08}
 }
 
-@ARTICLE{Kirby2003,
-  author = {R. C. Kirby},
-  title = {A Linear Algebraic Approach to Representing and Computing Finite
-	Elements},
-  journal = {submitted to Math. Comp.},
-  year = {2003},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
 @ARTICLE{KirbyKnepleyLoggEtAl2005,
   author = {R. C. Kirby and M. G. Knepley and A. Logg and L. R. Scott},
   title = {Optimizing the Evaluation of Finite Element Matrices},
-  journal = {{SIAM} J. Sci. Comput.},
+  journal = {SIAM J. Sci. Comput.},
   year = {2005},
   volume = {27},
   pages = {741--758},
@@ -4339,29 +4246,7 @@
   volume = {35},
   pages = {1--18},
   number = {2},
-  note = {submitted 2007-04-02, resubmitted 2007-08-23, accepted 2007-12-07
-	(communication handled by Rob)},
-  doi = {http://doi.acm.org/10.1145/1377612.1377614},
-  issn = {0098-3500},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@ARTICLE{KirbyLogg2008b,
-  author = {Robert C. Kirby and Anders Logg},
-  title = {Benchmarking {Domain-Specific} Compiler Optimizations for Variational
-	Forms},
-  journal = {{ACM} Trans. Math. Softw.},
-  year = {2008},
-  volume = {35},
-  pages = {1--18},
-  number = {2},
-  doi = {10.1145/1377612.1377614},
-  keywords = {compiler,complexity-reducing relations,ferari,ffc,finite element method,optimization,variational
-	form},
-  owner = {logg},
-  timestamp = {2009.06.07},
-  url = {http://portal.acm.org/citation.cfm?id=1377612.1377614&coll=GUIDE&dl=GUIDE&CFID=35011842&CFTOKEN=29677782}
+  url = {http://dx.doi.org/10.1145/1377612.1377614},
 }
 
 @ARTICLE{KirbyLogg2007,
@@ -4371,37 +4256,6 @@
   year = {2007},
   volume = {33},
   number = {3},
-  category = {articles},
-  duplicate = {True},
-  fixme = {page range},
-  issn = {0098-3500},
-  owner = {logg},
-  simula = {ok},
-  status = {published},
-  timestamp = {2009.06.06}
-}
-
-@TECHREPORT{KirbyLogg2007a,
-  author = {R. C. Kirby and A. Logg},
-  title = {Benchmarking Domain-Specific Compiler Optimizations for Variational
-	Forms},
-  institution = {Finite Element Center Preprint},
-  year = {2007},
-  number = {26},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@ARTICLE{KirbyLogg2007b,
-  author = {R. C. Kirby and A. Logg},
-  title = {Efficient Compilation of a Class of Variational Forms},
-  journal = {{ACM} Transactions on Mathematical Software},
-  year = {2007},
-  volume = {33},
-  number = {10},
-  issn = {0098-3500},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{KirbyLogg2006,
@@ -4412,23 +4266,6 @@
   volume = {32},
   pages = {417--444},
   number = {3},
-  category = {articles},
-  duplicate = {True},
-  issn = {0098-3500},
-  owner = {logg},
-  simula = {ok},
-  status = {published},
-  timestamp = {2009.06.06}
-}
-
-@TECHREPORT{KirbyLogg2006a,
-  author = {R. C. Kirby and A. Logg},
-  title = {Efficient Compilation of a Class of Variational Forms},
-  institution = {Finite Element Center Preprint},
-  year = {2006},
-  number = {24},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{KirbyLoggScottEtAl2006,
@@ -4440,36 +4277,6 @@
   volume = {28},
   pages = {224--240},
   number = {1},
-  category = {articles},
-  duplicate = {True},
-  issn = {1064-8275},
-  owner = {logg},
-  simula = {ok},
-  status = {published},
-  timestamp = {2009.06.06}
-}
-
-@ARTICLE{KirbyLoggScottEtAl2006a,
-  author = {R. C. Kirby and A. Logg and L. R. Scott and A. R. Terrel},
-  title = {Topological Optimization of the Evaluation of Finite Element Matrices},
-  journal = {{SIAM} J. Sci. Comput.},
-  year = {2006},
-  volume = {28},
-  pages = {224--240},
-  number = {8},
-  issn = {1064-8275},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@TECHREPORT{KirbyLoggScottEtAl2005,
-  author = {R. C. Kirby and A. Logg and L. R. Scott and A. R. Terrel},
-  title = {Topological Optimization of the Evaluation of Finite Element Matrices},
-  institution = {Chalmers Finite Element Center Preprint Series},
-  year = {2005},
-  number = {21},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{KirbyScott2007,
@@ -4482,16 +4289,6 @@
   url = {http://dx.doi.org/10.1137/060660722}
 }
 
-@ARTICLE{KirbyStroutHovlandEtAl2005,
-  author = {Robert C. Kirby and Michelle Mills Strout and Paul Hovland and L.
-	Ridgway Scott},
-  title = {Verification of Scientific Code using Rationality Analysis},
-  journal = {in preparation},
-  year = {2005},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
 @ARTICLE{Klawonn1998,
   author = {A. Klawonn},
   title = {Block-triangular preconditioners for saddle point problems with a
@@ -4501,8 +4298,6 @@
   volume = {19},
   pages = {172--184},
   number = {1},
-  note = {Special issue on iterative methods (Copper Mountain, CO, 1996)},
-  issn = {1064-8275}
 }
 
 @ARTICLE{KlawonnStarke1999,
@@ -4513,21 +4308,6 @@
   year = {1999},
   volume = {81},
   pages = {577–594}
-}
-
-@TECHREPORT{KnepleyKarpeev2007,
-  author = {M. G. Knepley and D. A. Karpeev},
-  title = {Mesh Algorithms for {PDE} with {S}ieve {I}: Mesh Distribution},
-  institution = {Argonne National Laboratory},
-  year = {2007},
-  type = {Technical Report},
-  number = {ANL/MCS-P1455-0907},
-  month = {February},
-  note = {Submitted to Scientific Programming},
-  owner = {logg},
-  pages = {14},
-  timestamp = {2009.06.06},
-  url = {ftp://info.mcs.anl.gov/pub/tech_reports/reports/P1455.pdf}
 }
 
 @ARTICLE{KobelkovOlshanskii2000,
@@ -4550,15 +4330,7 @@
   volume = {90},
   pages = {1999-2014},
   number = {6},
-  month = {Dec},
-  doi = {10.1529/biophysj.105.065466},
-  file = {Koh_2006_1999.pdf:Koh_2006_1999.pdf:PDF},
-  keywords = {16387773},
-  owner = {logg},
-  pii = {biophysj.105.065466},
-  pmid = {16387773},
-  timestamp = {2006.03.02},
-  url = {http://dx.doi.org/10.1529/biophysj.105.065466}
+  url = {http://dx.doi.org/10.1529/biophysj.105.065466},
 }
 
 @ARTICLE{KongableLanzinoGermansonEtAl1996,
@@ -4609,8 +4381,8 @@
   author = {Krejza, Jaroslaw and Szydlik, Piotr and Liebeskind, David S. and
 	Kochanowicz, Jan and Bronov, Oleg and Mariak, Zenon and Melhem, Elias
 	R.},
-  title = {{Age and Sex Variability and Normal Reference Values for the VMCA/VICA
-	Index}},
+  title = {Age and Sex Variability and Normal Reference Values for the {VMCA/VICA}
+	Index},
   journal = {AJNR Am J Neuroradiol},
   year = {2005},
   volume = {26},
@@ -4649,8 +4421,6 @@
   journal = {SIAM Journal on Numerical Analysis},
   year = {1983},
   pages = {485--509},
-  file = {LadevezeLeguillon1983.pdf:LadevezeLeguillon1983.pdf:PDF},
-  owner = {massing},
   publisher = {Society for Industrial and Applied Mathematics},
   timestamp = {2009.05.27}
 }
@@ -4708,20 +4478,6 @@
   volume = {70},
   pages = {1169--1182},
   number = {3},
-  month = {Mar},
-  file = {Lang_1996_1169.pdf:Lang_1996_1169.pdf:PDF},
-  key = {142},
-  keywords = {Animals, Binding Sites, Biophysics, Caffeine, Calcium, Calcium Channels,
-	Calcium Radioisotopes, Cardiovascular, Carrier Proteins, Cell Fractionation,
-	Cells, Cultured, Cytosol, Dibucaine, Heart, Heart Rate, Heart Ventricles,
-	Humans, In Vitro, Ion Transport, Mathematics, Models, Myocardial
-	Contraction, Myocardium, Newborn, Non-U.S. Gov't, P.H.S., Procaine,
-	Rats, Research Support, Sarcolemma, Sarcoplasmic Reticulum, Signal
-	Transduction, Sodium, Sodium Channels, Sodium-Calcium Exchanger,
-	Sprague-Dawley, U.S. Gov't, 8785276},
-  owner = {logg},
-  pmid = {8785276},
-  timestamp = {2009.06.07},
   url = {http://www.pubmedcentral.gov/articlerender.fcgi?tool=pubmed&pubmedid=8785276}
 }
 
@@ -4734,17 +4490,6 @@
   volume = {57},
   pages = {335--349},
   number = {2},
-  month = {Feb},
-  file = {Lang_1990_335.pdf:Lang_1990_335.pdf:PDF},
-  key = {244},
-  keywords = {Biological, Electrochemistry, Electron Spin Resonance Spectroscopy,
-	Fluorescence, Lipid Bilayers, Models, Non-P.H.S., Non-U.S. Gov't,
-	P.H.S., Phosphatidylinositol 4,5-Diphosphate, Phosphatidylinositols,
-	Phospholipids, Research Support, Spectrometry, Surface Properties,
-	U.S. Gov't, 2156577},
-  owner = {logg},
-  pmid = {2156577},
-  timestamp = {2006.01.31},
   url = {http://www.pubmedcentral.gov/articlerender.fcgi?tool=pubmed&pubmedid=2156577}
 }
 
@@ -6345,9 +6090,7 @@
   volume = {349},
   pages = {1498 - 1504},
   number = {9064},
-  doi = {DOI: 10.1016/S0140-6736(96)07492-2},
-  issn = {0140-6736},
-  url = {http://www.sciencedirect.com/science/article/B6T1B-3V92265-4/2/8cada1b90c84c4454a259025271b3730}
+  url = {http://dx.doi.org/10.1016/S0140-6736(96)07492-2},
 }
 
 @ARTICLE{NakaoKinoshita2008,
@@ -6359,8 +6102,6 @@
   volume = {21},
   pages = {1310--1314},
   number = {12},
-  publisher = {Elsevier},
-  timestamp = {2009.05.27}
 }
 
 @PHDTHESIS{Narayanan2007,
@@ -6381,26 +6122,17 @@
   pages = {29--31},
   publisher = {European Mathematical Society Publishing House},
   note = {presented by Harish at Mathematisches Forschungsinstitut Oberwolfach},
-  category = {proceedings},
-  owner = {logg},
-  simula = {ok},
-  status = {published},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{NayrolesTouzotVillon1992,
   author = {Nayroles, B. and Touzot, G. and Villon, P.},
-  title = {{Generalizing the finite element method: diffuse approximation and
-	diffuse elements}},
-  journal = {Computational mechanics},
+  title = {Generalizing the finite element method: diffuse approximation and
+	diffuse elements},
+  journal = {Computational Mechanics},
   year = {1992},
   volume = {10},
   pages = {307--318},
   number = {5},
-  file = {:NayrolesTouzotVillon1992.pdf:PDF},
-  owner = {massing},
-  publisher = {Springer},
-  timestamp = {2009.05.27}
 }
 
 @BOOK{Nazarov2009,
@@ -6473,9 +6205,6 @@
   volume = {127},
   pages = {6782},
   number = {1},
-  file = {Nochetto1993.pdf:Nochetto1993.pdf:PDF},
-  owner = {massing},
-  timestamp = {2009.05.27}
 }
 
 @ARTICLE{NordenLofRantakokkoEtAl2007,
@@ -6558,47 +6287,22 @@
 }
 
 @ARTICLE{OelgaardLoggWells2008,
-  author = {K. Oelgaard and A. Logg and G. N. Wells},
-  title = {Automated Code Generation for Discontinuous Galerkin Methods},
-  journal = {To appear in SIAM J. Sci. Comput.},
-  year = {2008},
-  number = {14},
-  issn = {1064-8275},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@ARTICLE{OelgaardLoggWells2008a,
-  author = {Kristian B. Oelgaard and Anders Logg and Garth N. Wells},
-  title = {Automated Code Generation for Discontinuous Galerkin Methods},
+  author = {Kristian B. {\O}lgaard and Anders Logg and Garth N. Wells},
+  title = {Automated Code Generation for Discontinuous {G}alerkin Methods},
   journal = {SIAM J. Sci. Comput.},
   year = {2008},
   volume = {31},
   pages = {849--864},
   number = {2},
-  note = {submitted 2007 by Garth, revision submitted 2008-04-21 by Garth,
-	accepted 2008-06-05},
-  category = {articles},
-  doi = {10.1137/070710032},
-  issn = {1064-8275},
-  owner = {logg},
-  simula = {ok},
-  status = {published},
-  timestamp = {2009.06.06},
-  url = {http://link.aip.org/link/?SCE/31/849}
+  url = {http://dx.doi.org//10.1137/070710032}
 }
 
 @INPROCEEDINGS{OelgaardWellsLogg2008,
-  author = {Kristian B. Oelgaard and Garth N. Wells and Anders Logg},
+  author = {Kristian B. {\O}lgaard and Garth N. Wells and Anders Logg},
   title = {Automated Computational Modelling for Solid Mechanics},
   booktitle = {IUTAM Symposium on Theoretical, Modelling and Computational Aspects
 	of Inelastic Media},
   year = {2008},
-  category = {proceedings},
-  owner = {logg},
-  simula = {ok},
-  status = {published},
-  timestamp = {2009.06.06}
 }
 
 @BOOK{Ogden1997,
@@ -8277,11 +7981,7 @@
   volume = {195},
   pages = {3776 - 3796},
   number = {29-32},
-  note = {Absorbing Boundary Conditions},
-  doi = {DOI: 10.1016/j.cma.2005.04.014},
-  issn = {0045-7825},
-  keywords = {Blood flow},
-  url = {http://www.sciencedirect.com/science/article/B6V29-4H4T0NX-1/2/6b79330f0a6ef0ac9ad2889950126116}
+  url = {http://dx.doi.org/10.1016/j.cma.2005.04.014},
 }
 
 @ARTICLE{Vorst1992,
@@ -8293,11 +7993,7 @@
   volume = {13},
   pages = {631-644},
   number = {2},
-  doi = {10.1137/0913035},
-  keywords = {Bi-CG; CG-S; nonsymmetric linear systems; iterative solver; preconditioning},
-  publisher = {SIAM},
-  timestamp = {2008.09.19},
-  url = {http://link.aip.org/link/?SCE/13/631/1}
+  url = {http://dx.doi.org/10.1137/0913035},
 }
 
 @PHDTHESIS{Walkley1999,
@@ -8318,13 +8014,6 @@
   volume = {39},
   pages = {865--885},
   number = {10},
-  coden = {IJNFDW},
-  fjournal = {International Journal for Numerical Methods in Fluids},
-  issn = {0271-2091},
-  mrclass = {76M10 (65M60 76D33 86-08 86A05)},
-  mrnumber = {MR1920152 (2003b:76117)},
-  owner = {logg},
-  timestamp = {2009.06.07}
 }
 
 @MANUAL{WalterKochothers2006,
@@ -8386,11 +8075,7 @@
   volume = {121},
   pages = {251-261},
   number = {5},
-  doi = {10.1061/(ASCE)0733-950X(1995)121:5(251)},
-  owner = {logg},
-  publisher = {ASCE},
-  timestamp = {2009.06.07},
-  url = {http://link.aip.org/link/?QWW/121/251/1}
+  url = {http://dx.doi.org/10.1061/(ASCE)0733-950X(1995)121:5(251)},
 }
 
 @ARTICLE{WeiKirbySinha1999,
@@ -8684,17 +8369,6 @@
   number = {2},
   owner = {logg},
   publisher = {John Wiley \& Sons, Ltd New York},
-  timestamp = {2009.06.06}
-}
-
-@ARTICLE{AlgaardWellsLogg2008,
-  author = {K. B. Ãlgaard and Garth N. Wells and A. Logg},
-  title = {Automated computational modelling for solid mechanics},
-  journal = {Submitted to IUTAM Symposium on Theoretical, Modelling and Computational
-	Aspects of Inelastic Media},
-  year = {2008},
-  number = {1},
-  owner = {logg},
   timestamp = {2009.06.06}
 }
 
