More bib tweaks.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8166,13 +8166,7 @@
   publisher = {Wiley-Interscience [John Wiley \& Sons]},
   year = {1974},
   author = {Whitham, G. B.},
-  pages = {xvi+636},
   address = {New York},
-  note = {Pure and Applied Mathematics},
-  mrclass = {76.00 (35L05 35Q99)},
-  mrnumber = {MR0483954 (58 \#3905)},
-  owner = {logg},
-  timestamp = {2009.06.07}
 }
 
 @INPROCEEDINGS{WilbersLangtangenOdegaard2009,
@@ -8204,8 +8198,6 @@
   volume = {17},
   pages = {14--17},
   number = {1},
-  coden = {SJNAAM},
-  issn = {0036-1429}
 }
 
 @ARTICLE{WohlmuthHoppe1999,
@@ -8217,10 +8209,6 @@
   volume = {68},
   pages = {1347--1378},
   number = {228},
-  file = {:WohlmuthHoppe1999.pdf:PDF},
-  owner = {massing},
-  publisher = {Washington, DC: National Academy of Sciences-National Research Council,[1960?-},
-  timestamp = {2009.05.27}
 }
 
 @ARTICLE{WolfHeath2009,
@@ -8263,7 +8251,6 @@
   volume = {33},
   pages = {1689--1694},
   number = {12},
-  file = {:YogCha2005.pdf:PDF}
 }
 
 @BOOK{Zdravkovich2003,
@@ -8290,13 +8277,9 @@
 
 @MISC{ZeeBrummelenBorst2008,
   author = {van der Zee, K. G. and van Brummelen, E. H. and de Borst, R.},
-  title = {{Goal-oriented error estimation and adaptivity for free-boundary
-	problems: The domain-map linearization approach}},
+  title = {Goal-oriented error estimation and adaptivity for free-boundary
+	problems: The domain-map linearization approach},
   year = {2008},
-  file = {ZeeBrummelenBorst2008.pdf:ZeeBrummelenBorst2008.pdf:PDF},
-  owner = {massing},
-  publisher = {Submitted},
-  timestamp = {2009.05.25}
 }
 
 @ARTICLE{ZeeBrummelenBorst2008a,
@@ -8325,8 +8308,8 @@
 
 @TECHREPORT{Zhang2005,
   author = {{Lin-bo} Zhang},
-  title = {A {P}arallel {A}lgorithm for {A}daptive {L}ocal {R}efinement of {T}etrahedral
-	{M}eshes {U}sing {B}isection},
+  title = {A parallel algorithm for adaptive local refinement of tetrahedral
+	meshes using bisection},
   institution = {Institute of Computational Mathematics and Scientific/Engineering
 	Computing},
   year = {2005},
@@ -8354,9 +8337,6 @@
   publisher = {Elsevier},
   year = {2005},
   author = {O. C. Zienkiewicz and R. L. Taylor and J. Z. Zhu},
-  comment = {Book was first published in 1967},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{ZienkiewiczZhu1987,
