--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3410,24 +3410,22 @@
 
 @ARTICLE{Hiptmair1997,
   author = {Hiptmair, R.},
-  title = {Multigrid method for {$\bold H({\rm div})$} in three dimensions},
+  title = {Multigrid method for $H({\rm div})$ in three dimensions},
   journal = {Electronic Transactions on Numerical Analysis},
   year = {1997},
   volume = {6},
   pages = {133--152},
-  number = {Dec.}
 }
 
 @ARTICLE{HiptmairXu2007,
   author = {R. Hiptmair and J. Xu},
-  title = {Nodal auxiliary space preconditioning in {${\rm H}({\rm curl})$}
-	and {${\rm H}({\rm div})$} spaces},
+  title = {Nodal auxiliary space preconditioning in $H({\rm curl})$
+	and {$H({\rm div})$} spaces},
   journal = {SIAM Journal on Numerical Analysis},
   year = {2007},
   volume = {45},
   pages = {2483--2509},
   number = {6},
-  issn = {0036-1429}
 }
 
 @ARTICLE{Hoffman2009,
