--- a/TODO
+++ b/TODO
@@ -15,6 +15,8 @@ Things to check
 * Full names in author list
 * Collect code examples and add references
 * Use of "..." vs ``...''
+* Add labels "C++ code", "Python code", "Bash code" to code
+  environments, same as in DOLFIN paper
 
 Things to discuss
 
