updates in the kvs-2 chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8430,7 +8430,8 @@
 }
 
 @UNPUBLISHED{vmtk,
-  title = {{Vascular Modeling Toolkit}},
+  title = {Software package},
+  author = {{Vascular Modeling Toolkit}},
   key = {Vascular Modeling Toolkit},
   url = {http://vmtk.org/}
 }
